Refactor project structure by updating TypeScript paths, removing unused favorites functionality, and cleaning up component imports; enhance product card interactions.

--- a/src/app/features/products/pages/product-list/product-list.component.html
+++ b/src/app/features/products/pages/product-list/product-list.component.html
@@ -39,8 +39,7 @@
         *ngFor="let product of products$ | async; trackBy: trackByProductId"
         [product]="product"
         [showFavoriteButton]="true"
-        (toggleFavorite)="onToggleFavorite($event)"
-        (productClick)="onProductClick($event)">
+        (toggleFavorite)="onToggleFavorite($event)">
       </app-product-card>
     </div>
 
