--- a/src/app/shared/ui/product-card/product-card.component.html
+++ b/src/app/shared/ui/product-card/product-card.component.html
@@ -1,4 +1,4 @@
-<div class="product-card" (click)="onProductClick()">
+<div class="product-card">
   <div class="product-image">
     <img [src]="product.thumbnail" [alt]="product.title" />
     <div class="discount-badge" *ngIf="product.discountPercentage > 0">
