Add temporarily visible state for unfavorited products in favorites list; update product card to reflect this state with new styles and logic

--- a/src/app/features/favorites/pages/favorites-list/favorites-list.component.html
+++ b/src/app/features/favorites/pages/favorites-list/favorites-list.component.html
@@ -63,6 +63,7 @@
         *ngFor="let favorite of favorites$ | async; trackBy: trackByProductId; let i = index"
         [product]="favorite"
         [showFavoriteButton]="true"
+        [isTemporarilyVisible]="isTemporarilyVisible(favorite.id)"
         [ngClass]="'favorite-item-' + (i + 1)"
         (toggleFavorite)="onToggleFavorite($event)">
       </app-product-card>
